[tool.poetry]
name = "starknet_devnet"
version = "0.1.14"
description = "A local testnet for Starknet"
authors = ["FabijanC <fabijan.corak@gmail.com>"]
license = "ISC"

readme = "README.md"
repository = "https://github.com/Shard-Labs/starknet-devnet"
homepage = "https://github.com/Shard-Labs/starknet-devnet"
keywords = ["starknet", "cairo", "testnet", "local", "server"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = {extras = ["async"], version = "^2.0.2"}
flask-cors = "^3.0.10"
cairo-lang = "0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
starknet-devnet = "starknet_devnet.server:main"
